docs parsing tuts

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
 
     <h1 id="hotDogOutput">Hot dog status:</h1>
+    <h3 id="lastSavedTimestamp">Last save : </h3>
     <input type="textfield" id="latestHotDogStatus"/>
     <button id="saveButton">Save</button>
     <button id="loadButton">Load</button>
